# planr

./: README.md  pyproject.toml
backend/planr/: __init__.py
backend/planr/orm/: __init__.py  validators.py
planr/: app.py  manage.py
planr/orm/models/: __init__.py  user.py
planr/routes/: auth.py
planr/utils/: functions.py
server/: package.json
server/src/: app.module.ts
server/src/entities/: user.entity.ts
server/src/user/: user.controller.ts  user.dto.ts  user.service.ts
